Fixed too big navbar in Safari (horizontal scrollbar)

--- a/web/css/layout/_navigation.less
+++ b/web/css/layout/_navigation.less
@@ -133,7 +133,7 @@
             .left(0);
             width: @96;
             z-index: 40;
-            max-width: ~"calc(100% - @{16})";
+            max-width: ~"calc(100vw - @{16})";
             background: var(--bg-main);
             transform: translateX(-100%);
             transition: transform 400ms, visibility 400ms 0s;
